--- a/tests/html/imports.html
+++ b/tests/html/imports.html
@@ -47,11 +47,11 @@
       // processed. All this is hack so we can test compiled code
       var origAddImport = CustomElementRegistry.prototype._addImport;
       var origObserveRoot = CustomElementRegistry.prototype._observeRoot;
-      var origObserveRootName;
-      var origAddImportName;
+      var origObserveRootName = '_observeRoot';
+      var origAddImportName = '_addImport';
       // To patch a compiled method that's called internally in the class, we
       // need to get the compiled, not exported, name:
-      for (var i in CustomElementRegistry.prototype) {
+      for (var i of Object.getOwnPropertyNames(CustomElementRegistry.prototype)) {
         var method = CustomElementRegistry.prototype[i];
         if (i !== '_addImport' && method === origAddImport) {
           origAddImportName = i;
